added pexels external image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- External Image -->
     <section>
         <h2>Embedded Image</h2>
-        <img src="img/nature.jpg" 
+        <img src="https://images.pexels.com/photos/31133725/pexels-photo-31133725.jpeg?cs=srgb&dl=pexels-71366650-31133725.jpg&fm=jpg&_gl=1*ppiwlm*_ga*MTcwNTA5NTI1Ny4xNzQ0MDAxMjYz*_ga_8JE65Q40S6*MTc0NDAwMTI2Mi4xLjAuMTc0NDAwMTI2Mi4wLjAuMA.." 
              alt="Nature Image" width="600">
     </section>
     
